tasks/05-paracl/test/errors/ambiguous_call.pcl
foo = func () : foo {
  print 1;
}

foo();